add: chord-dictionary페이지 ChordCard 컴포넌트 추가
- ChordCard 컴포넌트 퍼블리싱
- storybook, app/layout 전역 폰트 설정

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -40,3 +40,17 @@ $purple-600: #8d59cc;
 $purple-700: #7a45b3;
 $purple-800: #673499;
 $purple-900: #552680;
+
+/////////////////////////
+/////               /////
+/////   Semantic    /////
+/////               /////
+/////////////////////////
+
+/////////////////////////
+/////               /////
+/////   Component   /////
+/////               /////
+/////////////////////////
+$font-primary: $black;
+$font-secondary: $gray-scale-500;
