add: chord-dictionary페이지 퍼블리싱
- chord-dictionary 페이지 퍼블리싱
- _numbers.scss 오타 수정 redius -> radius
- svgr 설치 및 셋팅

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -3,6 +3,17 @@
   line-height: 1.5;
 }
 
+@mixin primary-14-400 {
+  font-size: 0.875rem;
+  line-height: 1.5;
+}
+
+@mixin primary-14-500 {
+  font-size: 0.875rem;
+  line-height: 1.5;
+  font-weight: 500;
+}
+
 @mixin primary-12-400 {
   font-size: 0.75rem;
   line-height: 1.5;
