--- a/src/styles/_numbers.scss
+++ b/src/styles/_numbers.scss
@@ -4,5 +4,5 @@
 /////               /////
 /////////////////////////
 
-$redius-common: 10px;
-$redius-common-large: 20px;
+$radius-common: 10px;
+$radius-common-large: 20px;
