--- a/src/app/chord-dictionary/_components/ChordCard/index.module.scss
+++ b/src/app/chord-dictionary/_components/ChordCard/index.module.scss
@@ -6,7 +6,7 @@
 .wrapper {
   width: 300px;
   padding: 14px 20px;
-  border-radius: numbers.$redius-common-large;
+  border-radius: numbers.$radius-common-large;
   display: flex;
   flex-direction: column;
   gap: 20px;
