add: 코드 이름, 표기법으로 검색기능 초기버전 구현
- zod 설치
- 검색 모듈과 컴포넌트 연결하여 검색 기능 완성. (초기버전. 코드가 복잡해서 정리해야함)
- storybook의 title 속성 제거하여 폴더구조에 기반하여 경로 설정되게함.

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -47,10 +47,15 @@ $purple-900: #552680;
 /////               /////
 /////////////////////////
 
+$primary: $blue-400;
+$secondary: $purple-400;
+
 /////////////////////////
 /////               /////
 /////   Component   /////
 /////               /////
 /////////////////////////
+
+// Font
 $font-primary: $black;
 $font-secondary: $gray-scale-500;
