--- a/src/app/chord-dictionary/_components/SearchPanel/KeywordSearcher/SearchBar/index.module.scss
+++ b/src/app/chord-dictionary/_components/SearchPanel/KeywordSearcher/SearchBar/index.module.scss
@@ -1,5 +1,5 @@
-@use '../../../../../styles/colors';
-@use '../../../../../styles/fonts';
+@use '../../../../../../styles/colors';
+@use '../../../../../../styles/fonts';
 
 .wrapper {
   display: flex;
