add: 추천 키워드 키보드 화살표로 순회 기능 추가
- 키보드 화살표로 순회기능 추가
- 마우스로 클릭했을 때 추천키워드가 선택되지 않던 문제 해결

--- a/src/app/chord-dictionary/_components/SearchPanel/KeywordSearcher/SearchBar/index.module.scss
+++ b/src/app/chord-dictionary/_components/SearchPanel/KeywordSearcher/SearchBar/index.module.scss
@@ -17,7 +17,7 @@
     border-radius: numbers.$radius-common-large;
 
     &.suggested {
-      border-bottom: none;
+      border-bottom-color: transparent;
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
     }
@@ -73,7 +73,8 @@
           border-radius: numbers.$radius-common-large;
           @include fonts.primary-14-400;
 
-          &:hover {
+          &:hover,
+          &.selected {
             background-color: colors.$gray-scale-200;
           }
         }
