--- a/src/app/chord-dictionary/page.module.scss
+++ b/src/app/chord-dictionary/page.module.scss
@@ -14,6 +14,19 @@
       .row {
         display: flex;
         gap: 20px;
+
+        .card-wrapper {
+          opacity: 0;
+          transform: translateY(20px);
+          animation: fadeIn 0.5s forwards;
+
+          @keyframes fadeIn {
+            to {
+              opacity: 1;
+              transform: translateY(0);
+            }
+          }
+        }
       }
     }
   }
