add: Header 컴포넌트 추가

--- a/src/app/chord-dictionary/page.module.scss
+++ b/src/app/chord-dictionary/page.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
   .contentsArea {
     margin: 0 auto;
+    padding-top: 40px;
     width: 1260px;
     display: flex;
     flex-wrap: wrap;
